07/28/2004 Bob Rossi <bob@brasko.net>

    * helptext.h: Updated the README file.
	* sources.h (struct list_node): add last_modification field
	(source_reload): added function
	* cgdb.c (process_commands): Call source_reload when
	TGDB_UPDATE_FILE_POSITION recieved
	* cgdbrc.c (VARIABLES): added autosourcereload
	(COMMANDS): Added source_reload.
	* sources.c
	(get_timestamp,release_file_buffer,release_file_memory,source_reload):
	new prototypes.


07/25/2004 Bob Rossi <bob@brasko.net>

    * cgdb.c (process_commands): Add case for TGDB_INFERIOR_EXITED

version 0.5.0 (07/14/2004):

07/14/2004 Bob Rossi <bob@brasko.net>

    * cgdb.c (create_help_file): null-terminate dashes.

06/29/2004 Bob Rossi <bob@brasko.net>

	* cgdb.h (cgdb_set_esc_sequence_timeout): changed return type
	from void to int
	* cgdb.c (input): removed
	(kui_ctx): added global object
	Changed calls from input_ to kui_
	* cgdbrc.c: use return value of cgdb_set_esc_sequence_timeout
	* filedlg.c: remove use of input.h
	* interface.c: remove use of input.h

06/14/2004 Bob Rossi <bob@brasko.net>

    * cgdb.c (parse_long_options): add NULL entry to long_options to fix crash 
	in getopt_long

version 0.4.2 (05/10/2004):
version 0.4.1 (04/26/2004):

03/31/2004 Bob Rossi <bob@brasko.net>

    * cgdb.c (gdb_input): Free buf, fixing a memory leak.
	(child_input): Ditto

03/22/2004 Bob Rossi <bob@brasko.net>

    * Doxyfile: Change TAGFILES line to use correct path to html.

03/22/2004 Bob Rossi <bob@brasko.net>

    * lib/Doxyfile: Moved to ./cgdb/Doxyfile
    * Doxyfile: New file moved from ./cgdb/lib/Doxyfile

03/06/2004 Bob Rossi <bob@brasko.net>

    * cgdb.c (version_info): change Copyright info. Changed date.

03/02/2004 Bob Rossi <bob@brasko.net>

    * lib/Doxyfile: Changing name of output file. 

02/27/2004 Bob Rossi <bob@brasko.net>

    * lib: Add directory

01/29/2004 Bob Rossi <bob@brasko.net>

   * cgdb.c: Changed PATH_MAX to FSUTIL_PATH_MAX and #include <limits.h> to
   #include "fs_util.h"